--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "ngx-teximate": "^0.3.0",
         "ngx-toastr": "^9.1.1",
         "rxjs": "~6.3.3",
+        "rxjs-compat": "^6.4.0",
+        "terser": "3.14.1",
         "tslib": "^1.9.0",
         "zone.js": "~0.8.26"
     },
@@ -36,9 +38,9 @@
         "@angular/cli": "~7.2.2",
         "@angular/compiler-cli": "~7.2.0",
         "@angular/language-service": "~7.2.0",
-        "@types/node": "~8.9.4",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
         "codelyzer": "~4.5.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
@@ -48,6 +50,7 @@
         "karma-jasmine": "~1.1.2",
         "karma-jasmine-html-reporter": "^0.2.2",
         "protractor": "~5.4.0",
+        "terser": "3.14.1",
         "ts-node": "~7.0.0",
         "tslint": "~5.11.0",
         "typescript": "~3.2.2"
