--- a/angular.json
+++ b/angular.json
@@ -102,8 +102,7 @@
                         "tsConfig": "src/tsconfig.spec.json",
                         "karmaConfig": "src/karma.conf.js",
                         "styles": [
-                            "src/styles.scss",
-                            "node_modules/font-awesome/css/font-awesome.css"
+                            "src/styles.scss"
                         ],
                         "scripts": [],
                         "assets": [
